# CrossDetector

./: .gitignore  LICENSE  README.md  ReadMe!.txt
Cpp/: CMakeLists.txt
Cpp/include/: utilities.h  video_flow.h
Cpp/res/: cascade.xml
Cpp/src/: CMakeLists.txt
Cpp/src/UAV/: CMakeLists.txt  background_video_flow.h  client.cpp  main.cpp  videoman_dev.h
Cpp/src/Utilities/: CMakeLists.txt
Cpp/src/VideoFlow/: CMakeLists.txt  video_flow.cpp
Cpp/src/WebcamTest/: CMakeLists.txt  main.cpp
Python/: Client MAVLink.py  Client Trigger.py  Client c++.py  Server.py
